--- a/Impilo App/Views/FollowUpVisit/FollowUp.xaml
+++ b/Impilo App/Views/FollowUpVisit/FollowUp.xaml
@@ -166,7 +166,7 @@
                                             <ComboBox HorizontalAlignment="Left" Margin="5,0,0,0" x:Name="ClinicUsed" DisplayMemberPath="ClinicName" SelectedValuePath="ClinicID" VerticalAlignment="Center" Width="253" Grid.Column="3" Grid.Row="1" SelectedIndex="0" />
                                             <Label Content="GPS Latitute" Height="28" HorizontalAlignment="Left" Margin="10,0,0,7" x:Name="label1_Copy1" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="7" Width="80" />
                                             <Label Content="GPS Longitude" Height="28" HorizontalAlignment="Left" Margin="10,0,0,0" x:Name="label2_Copy5" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="7" Width="93" Grid.Column="2" />
-                                            <xctk:MaskedTextBox x:Name="txtLatitude" Margin="6,14,0,9" Mask="S00.00000" Height="22" Width="243" ValueDataType="{x:Type sys:String}" Grid.Row="7" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
+                                            <xctk:MaskedTextBox x:Name="txtLatitude" Margin="7,14,0,9" Mask="S00.00000" Height="22" Width="243" ValueDataType="{x:Type sys:String}" Grid.Row="7" Grid.Column="1" HorizontalAlignment="Left" VerticalAlignment="Center"/>
                                             <xctk:MaskedTextBox x:Name="txtLongitude" Margin="10,17,0,6" Mask="E000.00000" Height="22" Width="243" ValueDataType="{x:Type sys:String}" Grid.Row="7" Grid.Column="3" VerticalAlignment="Center" HorizontalAlignment="Left"/>
 
 
@@ -503,10 +503,10 @@
                                             </Grid.RowDefinitions>
                                             <Label Content="Revisit in:" HorizontalAlignment="Left" Margin="26,15,0,16" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="1"/>
                                             <ComboBox HorizontalAlignment="Left" x:Name="comboDiaRevisit" Margin="21,20,0,16" VerticalAlignment="Center" Width="188" Grid.Column="1" Grid.Row="1">
-                                                <ComboBoxItem x:Name="h1week1" Content="1 Week"/>
-                                                <ComboBoxItem x:Name="h1month1" Content="1 Month"/>
-                                                <ComboBoxItem x:Name="h3month1" Content="3 Months"/>
-                                                <ComboBoxItem x:Name="hna1" Content="Not Applicable"/>
+                                                <ComboBoxItem x:Name="d1week1" Content="1 Week"/>
+                                                <ComboBoxItem x:Name="d1month1" Content="1 Month"/>
+                                                <ComboBoxItem x:Name="d3month1" Content="3 Months"/>
+                                                <ComboBoxItem x:Name="dna1" Content="Not Applicable"/>
                                             </ComboBox>
                                             <Label Content="Outcome" HorizontalAlignment="Left" Margin="26,14,0,17" VerticalAlignment="Center" FontWeight="Bold"/>
                                             <ComboBox HorizontalAlignment="Left" Margin="21,18,0,0" x:Name="comboDiaVisitOutCome" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Column="1">
@@ -670,12 +670,17 @@
                                             <Button x:Name="btnSaveHivMed" Style="{StaticResource BaseButtonStyle}" Content="Save and Add more Meds" HorizontalAlignment="Left" Margin="27,6,0,0" VerticalAlignment="Top" Width="198" Height="25" Grid.Row="4" Grid.Column="1" Visibility="Hidden" />
                                             <Label Content="Outcome" HorizontalAlignment="Left" Margin="14,16,0,16" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="3"/>
                                             <ComboBox HorizontalAlignment="Left" Margin="27,19,0,0" x:Name="comboHivVisitOutCome" Height="24" VerticalAlignment="Top" Width="188" FontWeight="Bold" Grid.Column="1" Grid.Row="3">
-                                                <ComboBoxItem x:Name="hout9" Content="Deceased"/>
-                                                <ComboBoxItem x:Name="hout10" Content="Discharged"/>
-                                                <ComboBoxItem x:Name="hout11" Content="Refused"/>
-                                                <ComboBoxItem x:Name="hout12" Content="Moved"/>
+                                                <ComboBoxItem x:Name="hvout9" Content="Deceased"/>
+                                                <ComboBoxItem x:Name="hvout10" Content="Discharged"/>
+                                                <ComboBoxItem x:Name="hvout11" Content="Refused"/>
+                                                <ComboBoxItem x:Name="hvout12" Content="Moved"/>
                                             </ComboBox>
-                                            <ComboBox HorizontalAlignment="Left" x:Name="comboHivRevisit" Height="23" VerticalAlignment="Center" Width="188" Grid.Row="4" Grid.Column="1" Margin="28,17,0,17"/>
+                                            <ComboBox HorizontalAlignment="Left" x:Name="comboHivRevisit" Height="23" VerticalAlignment="Center" Width="188" Grid.Row="4" Grid.Column="1" Margin="28,17,0,17">
+                                                <ComboBoxItem x:Name="hv1week" Content="1 Week"/>
+                                                <ComboBoxItem x:Name="hv1month" Content="1 Month"/>
+                                                <ComboBoxItem x:Name="hv3month" Content="3 Months"/>
+                                                <ComboBoxItem x:Name="hvna" Content="Not Applicable"/>
+                                            </ComboBox>
                                             <Label Content="Revisit in:" HorizontalAlignment="Left" VerticalAlignment="Center" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="4" Margin="16,16,0,15"/>
                                         </Grid>
                                     </GroupBox>
@@ -800,7 +805,7 @@
                                             <Label Content="Results" HorizontalAlignment="Left" Margin="10,-66,0,0" VerticalAlignment="Top" FontWeight="Bold"/>
                                             <RadioButton Content="Yes" x:Name="TBRecentUnplannedLoseOfWeight1" HorizontalAlignment="Left" Margin="5,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
                                             <RadioButton Content="No" x:Name="TBRecentUnplannedLoseOfWeight2" HorizontalAlignment="Left" Margin="70,10,0,0" VerticalAlignment="Top" Grid.Column="1"/>
-                                            <ComboBox HorizontalAlignment="Left" x:Name="txtTBReReferralNo" Height="23" Margin="5,7,0,0" VerticalAlignment="Top" Width="188" Grid.Column="1" Grid.Row="8"/>
+                                            <TextBox HorizontalAlignment="Left" x:Name="txtTBReReferralNo" Height="23" Margin="5,7,0,0" VerticalAlignment="Top" Width="188" Grid.Column="1" Grid.Row="8"/>
                                             <Label Content="Re-referral no." HorizontalAlignment="Left" Margin="10,6,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="8"/>
                                             <RadioButton GroupName="ep2" x:Name="TBReReferredToClinicYes" Content="Yes" HorizontalAlignment="Left" Margin="5,9,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.Row="7"/>
                                             <RadioButton GroupName="ep2" x:Name="TBReReferredToClinicNo" Content="No" HorizontalAlignment="Left" Margin="70,9,0,0" VerticalAlignment="Top" Grid.Column="1" Grid.Row="7"/>
@@ -990,8 +995,18 @@
                                                     <Label Content="Revisit in:" HorizontalAlignment="Left" Margin="21,12,0,4" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="3" Height="36" Width="88"/>
 
                                                     <Label Content="Outcomes" HorizontalAlignment="Left" Margin="21,16,0,7" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="4" Height="36" Width="88"/>
-                                                    <ComboBox x:Name="comboAstRevisit" Grid.Column="1" HorizontalAlignment="Left" Margin="25,18,0,0" Grid.Row="4" VerticalAlignment="Top" Width="188"/>
-                                                    <ComboBox x:Name="comboAstOutcomes" Grid.Column="1" HorizontalAlignment="Left" Margin="25,14,0,0" Grid.Row="3" VerticalAlignment="Top" Width="188"/>
+                                                    <ComboBox x:Name="comboAstOutcomes" Grid.Column="1" HorizontalAlignment="Left" Margin="25,18,0,0" Grid.Row="4" VerticalAlignment="Top" Width="188">
+                                                        <ComboBoxItem x:Name="aout13" Content="Deceased"/>
+                                                        <ComboBoxItem x:Name="aout14" Content="Discharged"/>
+                                                        <ComboBoxItem x:Name="aout15" Content="Refused"/>
+                                                        <ComboBoxItem x:Name="aout16" Content="Moved"/>
+                                                    </ComboBox>
+                                                    <ComboBox x:Name="comboAstRevisit" Grid.Column="1" HorizontalAlignment="Left" Margin="25,14,0,0" Grid.Row="3" VerticalAlignment="Top" Width="188">
+                                                        <ComboBoxItem x:Name="a1week" Content="1 Week"/>
+                                                        <ComboBoxItem x:Name="a1month" Content="1 Month"/>
+                                                        <ComboBoxItem x:Name="a3month" Content="3 Months"/>
+                                                        <ComboBoxItem x:Name="ana" Content="Not Applicable"/>
+                                                    </ComboBox>
                                                 </Grid>
                                             </GroupBox>
                                             <RadioButton GroupName="ep4" x:Name="AsCurrentlyOnMedsYes" Content="Yes" HorizontalAlignment="Left" Margin="167,16,0,0" VerticalAlignment="Top" Checked="AsCurrentlyOnMedsYes_Checked" />
@@ -1108,8 +1123,18 @@
                                                     <Label Content="Revisit in:" HorizontalAlignment="Left" Margin="21,12,0,4" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="3" Height="36" Width="88"/>
 
                                                     <Label Content="Outcomes" HorizontalAlignment="Left" Margin="21,16,0,7" VerticalAlignment="Center" FontWeight="Bold" Grid.Row="4" Height="36" Width="88"/>
-                                                    <ComboBox x:Name="comboEpiRevisit" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Width="188" Margin="8,16,0,0"/>
-                                                    <ComboBox x:Name="comboEpiOutcomes" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Top" Width="188" Margin="8,38,0,0"/>
+                                                    <ComboBox x:Name="comboEpiRevisit" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="3" VerticalAlignment="Top" Width="188" Margin="8,37,0,0">
+                                                        <ComboBoxItem x:Name="e1week" Content="1 Week"/>
+                                                        <ComboBoxItem x:Name="e1month" Content="1 Month"/>
+                                                        <ComboBoxItem x:Name="e3month" Content="3 Months"/>
+                                                        <ComboBoxItem x:Name="ena" Content="Not Applicable"/>
+                                                    </ComboBox>
+                                                    <ComboBox x:Name="comboEpiOutcomes" Grid.Column="1" HorizontalAlignment="Left" Grid.Row="4" VerticalAlignment="Top" Width="188" Margin="8,15,0,0">
+                                                        <ComboBoxItem x:Name="eout13" Content="Deceased"/>
+                                                        <ComboBoxItem x:Name="eout14" Content="Discharged"/>
+                                                        <ComboBoxItem x:Name="eout15" Content="Refused"/>
+                                                        <ComboBoxItem x:Name="eout16" Content="Moved"/>
+                                                    </ComboBox>
                                                 </Grid>
                                             </GroupBox>
                                             <Label Content="Currently on meds"
@@ -1606,7 +1631,7 @@
                                             <Label Content="Refer to clinic" HorizontalAlignment="Left" Margin="13,16,0,0" VerticalAlignment="Top" RenderTransformOrigin="0.077,0.383" FontWeight="Bold" Grid.Row="1"/>
                                             <TextBox HorizontalAlignment="Left" x:Name="txtOtherReferralNo2" Height="23" Margin="64,16,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="212" Grid.Row="2" Grid.Column="1"/>
                                             <Label Content="Referral no." HorizontalAlignment="Left" Margin="13,21,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49" Grid.Row="2"/>
-                                            <Label Content="Condition that" HorizontalAlignment="Left" Margin="13,24,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49"/>
+                                            <Label Content="Condition" HorizontalAlignment="Left" Margin="13,24,0,0" VerticalAlignment="Top" FontWeight="Bold" RenderTransformOrigin="0.472,-0.49"/>
                                             <RadioButton GroupName="epr2" x:Name="OtherReferToClinic11" Content="Yes" HorizontalAlignment="Left" Margin="64,22,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.Column="1"/>
                                             <RadioButton GroupName="epr2" x:Name="OtherReferToClinic12" Content="No" HorizontalAlignment="Left" Margin="129,22,0,0" VerticalAlignment="Top" Grid.Row="1" Grid.Column="1"/>
                                             <TextBox HorizontalAlignment="Left" x:Name="txtOtherConditionTha" Height="23" Margin="60,27,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="212" Grid.Column="1"/>
